--- a/Postcard/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Postcard/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="31" y="174" width="296" height="30"/>
+                                    <rect key="frame" x="26" y="249" width="296" height="30"/>
                                 </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mensagem" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fal-qe-jhY">
@@ -72,7 +72,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="31" y="225" width="296" height="30"/>
+                                    <rect key="frame" x="26" y="293" width="296" height="30"/>
                                 </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tFX-2U-ASG">
@@ -83,7 +83,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="31" y="285" width="46" height="30"/>
+                                    <rect key="frame" x="31" y="347" width="46" height="30"/>
                                 </variation>
                                 <connections>
                                     <action selector="sendPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DGw-QC-iKC"/>
@@ -95,7 +95,16 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="31" y="94" width="296" height="54"/>
+                                    <rect key="frame" x="31" y="129" width="296" height="112"/>
+                                </variation>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73K-oH-Ngf">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="31" y="100" width="291" height="21"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -106,6 +115,7 @@
                                 <exclude reference="Fal-qe-jhY"/>
                                 <exclude reference="tFX-2U-ASG"/>
                                 <exclude reference="5Fe-rL-sfQ"/>
+                                <exclude reference="73K-oH-Ngf"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -114,12 +124,14 @@
                                 <include reference="Fal-qe-jhY"/>
                                 <include reference="tFX-2U-ASG"/>
                                 <include reference="5Fe-rL-sfQ"/>
+                                <include reference="73K-oH-Ngf"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="messageLabel" destination="5Fe-rL-sfQ" id="Qby-G5-rsz"/>
                         <outlet property="messageTextField" destination="Fal-qe-jhY" id="Tj6-VF-D1q"/>
+                        <outlet property="nameLabel" destination="73K-oH-Ngf" id="SGB-Mv-Dbe"/>
                         <outlet property="nameTextField" destination="SyT-0O-6Pb" id="rWH-vE-CEd"/>
                     </connections>
                 </viewController>
